# AIMathBookPractice

./: .gitignore  README.md  pyproject.toml
chapter5/: chapter5.ipynb
chapter6/: chapter6.ipynb  download_rawdata.sh
notebook/: chapter5.ipynb
