[tool.poetry]
name = "ai-math-book-practice"
version = "0.1.0"
description = ""
authors = ["nafuka11"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
scikit-learn = "^0.24.2"
pandas = "^1.3.1"
matplotlib = "^3.4.3"
mecab-python3 = "^1.0.4"
gensim = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
